--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.13.0" %}
+{% set version = "0.14.0" %}
 
 package:
     name: biggus
@@ -7,7 +7,7 @@ package:
 source:
     fn: v{{ version }}.tar.gz
     url: https://github.com/SciTools/biggus/archive/v{{ version }}.tar.gz
-    md5: 51cbdc50ebbe3bf9056419e9323f2082
+    sha256: 16188881998253d124ce8aa924b35f3f466aff06b975c818b56a0663732ba314
 
 build:
     number: 0
