--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,10 +7,10 @@ package:
 source:
     fn: v{{ version }}.tar.gz
     url: https://github.com/SciTools/biggus/archive/v{{ version }}.tar.gz
-    sha256: 16188881998253d124ce8aa924b35f3f466aff06b975c818b56a0663732ba314
+    sha256: 947631a4730295e97c99c0631146bb063a8944271851c97115cc3fd94cf0d76e
 
 build:
-    number: 0
+    number: 1
     script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -35,3 +35,4 @@ extra:
         - pelson
         - rhattersley
         - ocefpaf
+        - marqh
