--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.14.0" %}
+{% set version = "0.15.0" %}
 
 package:
   name: biggus
@@ -7,10 +7,10 @@ package:
 source:
   fn: v{{ version }}.tar.gz
   url: https://github.com/SciTools/biggus/archive/v{{ version }}.tar.gz
-  sha256: 947631a4730295e97c99c0631146bb063a8944271851c97115cc3fd94cf0d76e
+  sha256: 81481f3b3632b7e99fae58c6034c6b351560ceff976ce4860d5c3b2f68713dc7
 
 build:
-  number: 2
+  number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -20,6 +20,7 @@ requirements:
   run:
     - python
     - numpy
+    - six
 
 test:
   imports:
